Update 8.2 Constant Members.md

--- a/64030074/8.2 Constant Members.md
+++ b/64030074/8.2 Constant Members.md
@@ -26,6 +26,16 @@ namespace ConstantMemberExample
     }
 }
 ```
+อธิบายโค้ด
+```
+ประกาศตัวแปรรัศมี (radius) และกำหนดค่าเป็น 5.0
+กำหนดค่าคงที่ PI และกำหนดค่าเป็น 3.14159
+แสดงข้อความต้อนรับ "Welcome, this program calculate circle area"
+แสดงค่ารัศมีของวงกลม "The radius of circle is 5.0 unit."
+คำนวณพื้นที่ของวงกลมโดยใช้สูตร PI * รัศมี * รัศมี และเก็บผลลัพธ์ในตัวแปร area
+แสดงค่าพื้นที่ของวงกลม "The area of circle is [ค่าพื้นที่] square unit." โดยที่ค่าพื้นที่ถูกจัดรูปเป็นทศนิยม 4 ตำแหน่ง
+```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/f3164327-98e1-422b-85c5-72c6955de84d)
 
 
 ## 8.2.2 Member constant (Constant ของ class)
@@ -57,6 +67,13 @@ namespace ConstantMemberExample
     }
 }
 ```
+อธิบายโค้ด
+```
+กำหนดค่าคงที่ PI และกำหนดค่าเป็น 3.14159 ในคลาส MyCircle
+สร้างเมธอด PrintArea ที่รับพารามิเตอร์เป็นรัศมี (radius) และทำการคำนวณพื้นที่ของวงกลมตามสูตร PI * รัศมี * รัศมี และแสดงผลลัพธ์พื้นที่ของวงกลม
+ในเมธอด Main ในคลาส Program จะเรียกใช้เมธอด PrintArea ในคลาส MyCircle โดยส่งค่ารัศมีเป็น 5.0
+```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/7ad6418e-a6fb-472c-8aa2-221cf625e13d)
 
 
 ## 8.2.3 Constant in expression
@@ -91,6 +108,16 @@ namespace ConstantMemberExample
     }
 }
 ```
+อธิบายโค้ด
+```
+กำหนดค่าคงที่ PI และกำหนดค่าเป็น 3.14159 ในคลาส MyCircle
+กำหนดค่าคงที่ PI2 และกำหนดค่าเป็น PI คูณ 2.0
+สร้างเมธอด PrintArea ที่รับพารามิเตอร์เป็นรัศมี (radius) และทำการคำนวณพื้นที่ของวงกลมตามสูตร PI * รัศมี * รัศมี และแสดงผลลัพธ์พื้นที่ของวงกลม
+สร้างเมธอด PrintCircumference ที่รับพารามิเตอร์เป็นรัศมี (radius) และทำการคำนวณความยาวเส้นรอบวงของวงกลมตามสูตร PI2 * รัศมี และแสดงผลลัพธ์ความยาวเส้นรอบวงของวงกลม
+ในเมธอด Main ในคลาส Program จะเรียกใช้เมธอด PrintArea และ PrintCircumference ในคลาส MyCircle โดยส่งค่ารัศมีเป็น 5.0
+```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/d56c2b56-4246-4496-86eb-f6cce9a0a661)
+
 
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
@@ -118,6 +145,13 @@ namespace ConstantMemberExample
     }
 }
 ```
+อธิบายโค้ด
+```
+กำหนดค่าคงที่ PI และกำหนดค่าเป็น 3.14159 ในคลาส MyCircle
+สร้างเมธอด PrintArea ที่รับพารามิเตอร์เป็นรัศมี (radius) และทำการคำนวณพื้นที่ของวงกลมตามสูตร PI * รัศมี * รัศมี และแสดงผลลัพธ์พื้นที่ของวงกลม
+ในเมธอด Main ในคลาส Program จะเรียกใช้เมธอด PrintArea ในคลาส MyCircle โดยส่งค่ารัศมีเป็น 5.0
+```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/9394abd9-67d9-409f-9f44-042306ecd7b2)
 
 ## 8.2.5 public static constant
 
@@ -143,14 +177,21 @@ namespace ConstantMemberExample
     }
 }
 ```
+อธิบายโค้ด
+```
+กำหนดค่าคงที่ PI และกำหนดค่าเป็น 3.14159 ในคลาส MyCircle โดยใช้คีย์เวิร์ด const
+สร้างเมธอด PrintArea ที่รับพารามิเตอร์เป็นรัศมี (radius) และทำการคำนวณพื้นที่ของวงกลมตามสูตร PI * รัศมี * รัศมี และแสดงผลลัพธ์พื้นที่ของวงกลม
+ในเมธอด Main ในคลาส Program จะเรียกใช้เมธอด PrintArea ในคลาส MyCircle โดยส่งค่ารัศมีเป็น 5.0
+```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/45987447-355c-4c74-8645-6d5e79fdf0c1)
 
 
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
-
+ - Local constants มีขอบเขตการใช้งานภายในเมทอดเท่านั้น ในขณะที่ Member constants สามารถเข้าถึงได้ในทุกส่วนของคลาส รวมถึงเมทอดต่าง ๆ ในคลาสนั้น
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+ - ไม่สามารถเปลี่ยนค่าภายหลังได้ ค่าคงที่ที่ถูกประกาศภายในเมทอดจะถูกกำหนดค่าและคงที่ตลอดระยะเวลาการทำงานของเมทอดนั้น
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+ - ไม่สามารถเปลี่ยนค่าภายหลังได้ ค่าคงที่ของสมาชิกถูกกำหนดค่าเมื่อถูกประกาศและจะคงที่ตลอดระยะเวลาการทำงานของโปรแกรม
  
