--- a/64030074/8.3 Properties.md
+++ b/64030074/8.3 Properties.md
@@ -31,6 +31,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/14dd0e5d-c876-4027-ab9c-9bd8ac7e6ea9)
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +60,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/6aec889e-6052-412e-8cfd-2fab82106781)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,6 +92,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/4fb205a4-f691-4d6d-82ac-d90bc27496ff)
 
 
 ## 8.3.4 properties calculation
@@ -117,6 +120,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/8e00a187-975c-41cf-89d9-01cabaad6369)
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +150,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/099014c1-a5d8-4dbf-a843-0d35e5304b8a)
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +191,16 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/885faf53-984b-4233-bee1-fef095177b30)
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
-
+    - Fields เป็นตัวแปรที่ใช้เก็บข้อมูลโดยตรง ในขณะที่ properties เป็นการแยกการเข้าถึงและการกำหนดค่าของข้อมูลเป็นเองให้กับอ็อบเจ็กต์ และยังมีความยืดหยุ่นในการเพิ่มโค้ดเพิ่มเติมได้
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
-
+    - ใช้ Field เมื่อต้องการเก็บข้อมูลโดยตรงโดยไม่มีการตรวจสอบหรือกำหนดเงื่อนไขเพิ่มเติม และไม่ต้องการการควบคุมการเข้าถึงหรือการแก้ไขค่าข้อมูลในอนาคต
+    - ใช้ Properties เมื่อต้องการมีการตรวจสอบเงื่อนไขหรือกำหนดการเข้าถึงและการแก้ไขค่าข้อมูล เพื่อให้มีความยืดหยุ่นในการจัดการข้อมูลและการเพิ่มโค้ดเพิ่มเติมในอนาคต
 3. value ใน setter หมายถึงอะไร
-
+    - value ใน setter หมายถึงค่าที่ถูกส่งเข้ามาในตอนกำหนดค่าให้กับ Properties นั้น โดย value คือตัวแปรที่ใช้ในการรับค่าที่ต้องการกำหนดให้กับ Properties นั้น ค่าของ value จะถูกนำมาใช้ในตัว setter เพื่อกำหนดค่าให้กับ Properties นั้นตามที่กำหนด
 4. return ใน setter ต้องมี type ตรงกับอะไร
+    - มี type ตรงกับประเภทของค่าที่ Properties
