Update 8.1 Static Member.md

--- a/64030318/Labs/8.1 Static Member.md
+++ b/64030318/Labs/8.1 Static Member.md
@@ -32,8 +32,14 @@ namespace StaticMemberExample
         }
     }
 }
-
+1. ประกาศ class Cat โดยมี Instance member คือ ตัวแปร legs ชนิด int เป็นแบบ public และกำหนดค่าให้เท่ากับ 4
+2. ประกาศ class Duck โดยมี Static member คือ ตัวแปร legs ชนิด int เป็นแบบ public และกำหนดค่าให้เท่ากับ 2
+3. ประกาศ class Program แบบ internal คือ สามารถใช้ class นี้ได้เฉพ่าะใน namespace เดียวกันเท่านั้น
+4. สร้าง Object cat จาก class Cat 
+5. แสดงข้อความ Cat has 4 legs โดยเรียกใข้ผ่าน Object cat
+6. แสดงข้อความ Duck has 2 legs โดยเรียกใช้ผ่าน class Duck
 ```
+![image](https://github.com/suwithirunrat/Week-08/assets/116150760/0e9d5c27-41da-42d9-bba8-81566aaf8e00)
 
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
@@ -69,6 +75,17 @@ namespace StaticMemberExample
 }
 
 ```
+1. ประกาศ class cat โดยมี Instance member แบบ public คือ legs ชนิด int ที่มีค่าคือ 4 static member แบบ public คือ count ชนิด int ที่มีค่าคือ 0 และมี constractor ที่จะเพิ่มค่า count ขึ้น 1 ทุกครั้งที่เรียกใช้หรือก็คือจะเพิ่มขึ้น 1 ทุกครั้งเมื่อสร้าง object จาก class Cat
+2. ประกาศ class program ที่มี method main 
+3. สร้าง object cat จาก class Cat
+4. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 1
+5. สร้าง object cat1 จาก class Cat
+6. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 2
+7. สร้าง array ของ class Cat โดยให้ array โดยกำขนดขนาดของ array ให้เท่ากับ 10
+8. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 2
+9. สร้าง object catArray โดยใช้ loop for เป็นจำนวน 10 ครั้ง
+10. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 12
+11. ![image](https://github.com/suwithirunrat/Week-08/assets/116150760/c8570468-fc8c-425c-bf79-3119393d726c)
 
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -113,6 +130,19 @@ namespace StaticMemberExample
     }
 }
 ```
+1. ประกาศ class Cat โดยกำหนด Instance member คือ legs และ Static member คือ count
+2. ประกาศ constractor ที่จะเพิ่มค่า count ขึ้น 1 เมื่อสร้าง object
+3. ประกาศ methods PrintCatCount ที่จะแสดงค่า count ตามเงื่อนไข คือ ถ้า count = 1 จะแสดงค่า count และตามด้วย cat ถ้า count > 1 จะแสดงค่า count และตามด้วย cats และถ้าไม่ตรงตามเงื่อนไขใดเลยจะแสดงข้อความว่า Invalid number of cats
+4. ประกาศ class Program ที่มี method main 
+5. สร้าง object cat จาก class Cat
+6. เรียกใช้ method PrintCatCount จาก class Cat
+7. สร้าง object cat จาก class Cat
+8. เรียกใช้ method PrintCatCount จาก class Cat
+9. สร้าง array ของ class Cat โดยให้ array โดยกำขนดขนาดของ array ให้เท่ากับ 10
+10. เรียกใช้ method PrintCatCount จาก class Cat
+11. สร้าง object catArray โดยใช้ loop for เป็นจำนวน 10 ครั้ง
+12. เรียกใช้ method PrintCatCount จาก class Cat
+![image](https://github.com/suwithirunrat/Week-08/assets/116150760/b615c07f-47df-4146-a0b8-96bc0c0c1897)
 
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -150,11 +180,23 @@ namespace StaticMemberExample
     }
 }
 ```
-
+1. ประกาศ class Cat โดยกำหนด Instance member คือ legs และ Static member คือ count
+2. ประกาศ constractor ที่จะเพิ่มค่า count ขึ้น 1 เมื่อสร้าง object
+3. ประกาศ methods PrintCatCount ที่จะแสดงค่า count ตามเงื่อนไข คือ ถ้า count = 1 จะแสดงค่า count และตามด้วย cat ถ้า count > 1 จะแสดงค่า count และตามด้วย cats และถ้าไม่ตรงตามเงื่อนไขใดเลยจะแสดงข้อความว่า Invalid number of cats
+4. ประกาศ class Program ที่มี method main 
+5. สร้าง object cat จาก class Cat
+6. เรียกใช้ method PrintCatCount จาก class Cat
+7. สร้าง object cat จาก class Cat
+8. เรียกใช้ method PrintCatCount จาก class Cat โดยเรียกใช้ผ่าน ชื่อตัวแปร cat1
+![image](https://github.com/suwithirunrat/Week-08/assets/116150760/e7ccbc58-5e10-4736-a3b8-9362406152b8)
 
 ## คำถาม
 
 1. Static member ต่างจาก instance member  อย่างไร
-
+- Static mumber คือ ตัวแปรหรือ method ที่เพิ่ม keyword static ในตอนที่ประกาศตัวแปรหรือ method เช่น public static int count = 0; public static void printcatcount(){}
+  โดยตัวแปรและ method ที่เป็น static จะสร้างในตอนที่สร้าง class เพียงครั้งเดียวเท่านั้น สามารถเรียกใช้งานได้โดยสร้าง พิมพ์ชื่อคลาสและตามด้วยชื่อตัวแปรหรือ method เช่น Cat.printcatcount();
+- Instance member คือ ตัวแปรหรือ method ที่อยู่ในคลาส เช่น public int count = 0; public void princatcont(){} โดยตัวแปรและ method ที่เป็น Intance จะถูกสร้างใหม่ทุกครั้งที่สร้าง object
+  สามารถเรียกใช้ได้โดยสร้าง object และเรียกใช้งาน method หรือตัวแปร เช่น 
+  Cat cat = new Cat(); cat.count++; cat.prntcatcount();
 2. สถานการณ์ใดที่ควรใช้ static member
-
+เมื่อต้องการให้ค่าของตัวแปรหรือ method ใน class นั้นๆสามารถเข้าถึงได้โดยไม่ต้องส้ราง object ขึ้นมาก่อน
