--- a/64030318/Labs/8.3 Properties.md
+++ b/64030318/Labs/8.3 Properties.md
@@ -31,6 +31,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-08/assets/116150760/571da1ad-bc5e-477d-9564-85571a0a28b9)
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +60,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-08/assets/116150760/64814782-7ccc-458b-8c87-f796874c60de)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,7 +92,36 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-08/assets/116150760/44248116-209b-41a4-a5d1-a96bf8b8b8ce)
+Error เพราะ ไม่สามารถเรียกใช้ get และ set ในฐานะ method ได้ สามรถเรียกใช้ได้ เช่น 
+Garfield.Age = 5;
+int catAge = Garfield.Age;
+``` cs
+using System.Drawing;
+namespace PropertyExample
+{
 
+    class Cat
+    {
+        public int Age { get; set; }
+        public Color SkinColor { get; set; }
+
+    }
+    internal class Program
+    {
+        static void Main(string[] args)
+        {
+            var Garfield = new Cat();
+            // callint setter
+            Garfield.Age = 5;
+
+            // calling getter
+            int catAge = Garfield.Age;
+            Console.WriteLine(catAge);
+        }
+    }
+}
+```
 
 ## 8.3.4 properties calculation
 
@@ -117,6 +148,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-08/assets/116150760/c3d0669e-496f-4b35-8d83-3ad2b2299fb5)
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +178,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-08/assets/116150760/d3187362-b3eb-4f82-9bf6-6e1ac79d52ee)
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +219,17 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-08/assets/116150760/8929a9ef-cac5-4d37-9929-85a5c08a047e)
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
-
+Field คือ ตัวแปรที่สามารถเปลี่ยนแปลค่าได้ซึ่งถูกประกาศในคลาสเพื่อเก็บข้อมูล
+properties คือ วิธีการเข้าถึงและกำหนดค่าของตัวแปรภายในคลาสโดยไม่ต้องเขียน method โดยตะใช้ท method getter and setter ที่มีอยู่แล้วมาใช้สำหรับอ่านและเขียนข้อมูลของตัวแปร
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
-
+Field ใช้ตอนที่ต้องการเก็บข้อมูลโดยตรงที่ไม่ต้องการการเข้าถึงและไม่ต้องการการตรวจสอบความถูกต้องของข้อมูล
+properties ใช้ตอนที่ต้องการเข้าถึงหรือตั้งค่าตัวแปรโดยต้อบงการให้มีการตรวจสอบความถูกต้องของข้อมูลที่รับเข้ามา และใช้ในตอนที่ต้องการคำนวณค่าข้อมูลเพื่อเก็บลงในคัวแปรโดยที่ไม่ต้องเขียน method เพื่อคำนวณค่า
 3. value ใน setter หมายถึงอะไร
-
+ตัวแปรพิเศษของ property ที่ใช้สำหรับเป็นตัวแทนของข้อมูลที่กำลังจะ set ให้กับ properties โดยข้อมูลที่จะ set ให้ properties จะถูกเก็บไว้ที่ value ก่อนนั่นเอง
 4. return ใน setter ต้องมี type ตรงกับอะไร
+ต้องมี type เป็นชนิดเดียวกับ properties
